--- a/css/style.css
+++ b/css/style.css
@@ -906,11 +906,11 @@ ol.numbers {
 }
 
 .nav-search{
-  width: 50%;
+  width: 58.33%;
 }
 
 .nav-cart-wrap{
-  width: 25%;
+  width: 16.66%;
 }
 
 .logo-container {
@@ -1268,13 +1268,13 @@ ol.numbers {
 .nav-cart-icon {
   display: block;
   position: relative;
-  width: 20px;
-  height: 20px;
-  font-size: 10px;
+  width: 30px;
+  height: 30px;
+  font-size: 14px;
   text-align: center;
-  line-height: 16px;
+  line-height: 26px;
   font-family: "Maven Pro", sans-serif;
-  font-weight: 700;
+  font-weight: 400;
   color: #444444;
   border: 2px solid #979797;
   border-radius: 2px;
@@ -1286,12 +1286,25 @@ ol.numbers {
   width: 10px;
   height: 6px;
   top: -7px;
-  left: 3px;
+  left: 8px;
   position: absolute;
   border: 2px solid #979797;
   border-top-left-radius: 50px;
   border-top-right-radius: 50px;
   border-bottom: 0;
+}
+
+.nav-wishlist {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.nav-wishlist a {
+  padding-right: 10px;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.08em;
+  color: #444444;
 }
 
 .menu-cart-amount {
@@ -1530,6 +1543,7 @@ ol.numbers {
 .top-bar-links {
   line-height: 45px;
   font-size: 13px;
+  text-align: right;
 }
 
 .top-bar-links a {
@@ -1546,6 +1560,7 @@ ol.numbers {
 
 .top-bar > ul,
 .top-bar-links > ul > li {
+  list-style-type: none;
   display: inline-block;
   position: relative;
 }
@@ -1607,7 +1622,7 @@ ol.numbers {
 }
 
 .top-bar-links .top-bar-link a:after {
-  content: "•";
+  content: "|";
   margin: 0 7px 0 10px;
 }
 
@@ -3520,11 +3535,11 @@ ol.numbers {
 .social-icons a {
   margin: 0 3px 6px 0;
   display: inline-block;
-  width: 32px;
-  height: 32px;
+  width: 45px;
+  height: 45px;
   color: #bfbfbf;
   background-color: #f7f7f7;
-  line-height: 32px;
+  line-height: 45px;
   text-align: center;
   font-size: 13px;
   -webkit-transition: all 0.3s ease-in-out;
@@ -3613,7 +3628,6 @@ input[type="tel"],
 input[type="number"],
 input[type="date"],
 input[type="search"],
-select,
 textarea {
   height: 41px;
   border: 1px solid #ebebeb;
@@ -3691,6 +3705,7 @@ textarea:-ms-input-placeholder {
 }
 
 select {
+  border: none;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
