--- a/css/style.css
+++ b/css/style.css
@@ -3628,6 +3628,7 @@ input[type="tel"],
 input[type="number"],
 input[type="date"],
 input[type="search"],
+select,
 textarea {
   height: 41px;
   border: 1px solid #ebebeb;
@@ -4511,7 +4512,7 @@ table th {
 }
 
 .filter-by-price input#amount {
-  width: 40%;
+  width: 45%;
   padding: 0;
   font-size: 13px;
   color: #444444;
