--- a/css/style.css
+++ b/css/style.css
@@ -4102,11 +4102,14 @@ table th {
 
 .area-selecting {
   float: left;
-  width: 33.33%;
 }
 
 .area-selecting select {
   margin-bottom: 0;
+}
+
+.bootstrap-datetimepicker-widget.dropdown-menu{
+  z-index:1151 !important;
 }
 
 .single-product .price del {
