pushing after labour table structure changed

--- a/admin/css/custom.css
+++ b/admin/css/custom.css
@@ -3401,6 +3401,7 @@ ul.project_files li a i {
 }
 .login {
     background: #F7F7F7
+    background-image:url(../IMAGES/about.jpg);
 }
 .login .fa-paw {
     font-size: 26px
